# HexagonSDK

./: .gitattributes
linux/4.4.0.1/examples/asyncdspq_example/: CMakeLists.txt  README.md  UbuntuARM.min  android.min  android_deps.min  asyncdspq_fcvqueuetest_walkthrough.py  asyncdspq_queueperf_walkthrough.py  asyncdspq_queuetest_walkthrough.py  cmake_build.bash  cpu.min  hexagon.min  hexagon_deps.min  hexagon_unsupport.min
linux/4.4.0.1/examples/asyncdspq_example/inc/: fcvqueuetest.idl  queuetest.idl
linux/4.4.0.1/examples/asyncdspq_example/src/: fcvqueue_dsp_imp.c  fcvqueuetest.c  fcvqueuetest_imp.c  queueperf.c  queuetest.c  queuetest_imp.c
linux/4.4.0.1/examples/calculator/: CMakeLists.txt  README.md  UbuntuARM.min  all.mak  android.min  calculator_walkthrough.py  cmake_build.bash  cpu.min  hexagon.min  mingw_rules.min  runtime_farf_validation.py  snapcraft.yaml
linux/4.4.0.1/examples/calculator/inc/: calculator.idl
linux/4.4.0.1/examples/calculator/src/: calculator_imp.c  calculator_main.c  calculator_test.c  calculator_test.h  calculator_test_main.c
linux/4.4.0.1/examples/calculator_c++/: CMakeLists.txt  Makefile  README.md  UbuntuARM.min  android.min  calculator_c++_walkthrough.py  cmake_build.bash  cpu.min  hexagon.min  snapcraft.yaml
linux/4.4.0.1/examples/calculator_c++/inc/: calculator_dsp.h  calculator_plus.idl
linux/4.4.0.1/examples/calculator_c++/src/: calculator_apps.c  calculator_dsp.cpp  calculator_test.c  calculator_test.h  calculator_test_main.c  data.h  thread_local.cpp
linux/4.4.0.1/examples/dspqueue/: CMakeLists.txt  README.md  android.min  android_deps.min  cmake_build.bash  cmake_build.cmd  dspqueue_walkthrough.py  hexagon.min  hexagon_deps.min
linux/4.4.0.1/examples/dspqueue/inc/: dspqueue_sample.idl  dspqueue_sample_shared.h
linux/4.4.0.1/examples/dspqueue/src/: dspqueue_sample.c  dspqueue_sample_imp.c
linux/4.4.0.1/examples/gtest/: CMakeLists.txt  README.md  cmake_build.bash  gtest_walkthrough.py
linux/4.4.0.1/examples/gtest/docs/: advanced.md  cheat_sheet.md  cook_book.md  faq.md  primer.md  pump_manual.md
linux/4.4.0.1/examples/gtest/inc/: gtest.idl
linux/4.4.0.1/examples/gtest/src/: gtest.cpp  gtest_imp.cpp
linux/4.4.0.1/examples/hap_example/: CMakeLists.txt  Makefile  README.md  UbuntuARM.min  UbuntuARM_deps.min  android.min  cmake_build.bash  cpu.min  hap_example_walkthrough.py  hexagon.min  hexagon_deps.min  snapcraft.yaml
linux/4.4.0.1/examples/hap_example/inc/: hap_example.idl
linux/4.4.0.1/examples/hap_example/src_app/: hap_example.c  hap_example_main.c  hap_unit_test.c
linux/4.4.0.1/examples/hap_example/src_dsp/: hap_example_compute_res_imp.c  hap_example_farf_runtime.c  hap_example_imp.c  hap_example_mem_dmahandle_imp.c  hap_example_mem_fastrpc_mmap_imp.c  hap_example_perf_imp.c  hap_example_power_imp.c  hap_example_sysmon_cachelock_imp.c  hap_example_vtcm_mgr_imp.c  hap_unit_test_imp.c
linux/4.4.0.1/examples/lpi_example/: CMakeLists.txt  Makefile  README.md  cmake_build.bash  hexagon.min  hexagon_deps.min  lpi_walkthrough.py
linux/4.4.0.1/examples/lpi_example/src/: so_source.c  uimage_v2.lcs  uimg_dl_v2.c
linux/4.4.0.1/examples/multithreading/: CMakeLists.txt  Makefile  README.md  UbuntuARM.min  all.mak  android.min  cmake_build.bash  cpu.min  hexagon.min  hexagon_deps.min  multithreading_walkthrough.py  snapcraft.yaml
linux/4.4.0.1/examples/multithreading/inc/: multithreading.idl
linux/4.4.0.1/examples/multithreading/src/: multithreading.c  multithreading_imp.c
linux/4.4.0.1/examples/profiling/: CMakeLists.txt  README.md  UbuntuARM.min  UbuntuARM_deps.min  android.min  cmake_build.bash  config_example.py  config_simulator.py  cpu.min  hexagon.min  hexagon_deps.min  profiling_walkthrough.py  run_profilers.py  snapcraft.yaml  tests.txt
linux/4.4.0.1/examples/profiling/asm_src/: profiling_assembly.S
linux/4.4.0.1/examples/profiling/inc/: profiling.idl
linux/4.4.0.1/examples/profiling/src/: profiling_asm.h  profiling_imp.c  profiling_main.c  rpcperf.c  rpcperf.h  rpcperf_imp.c
linux/4.4.0.1/examples/qhl/: CMakeLists.txt  Makefile  README.md  cmake_build.bash  qhl_example.c  qhl_walkthrough.py  snapcraft.yaml
linux/4.4.0.1/examples/qhl_hvx/: CMakeLists.txt  Makefile  README.md  cmake_build.bash  qhl_hvx_example.c  qhl_hvx_walkthrough.py  snapcraft.yaml
linux/4.4.0.1/examples/qprintf_example/: CMakeLists.txt  README.md  UbuntuARM.min  android.min  android_deps.min  cmake_build.bash  cpu.min  hexagon.min  hexagon_deps.min  qprintf_example_walkthrough.py  snapcraft.yaml
linux/4.4.0.1/examples/qprintf_example/asm_src/: qprintf_example_asm.S
linux/4.4.0.1/examples/qprintf_example/src/: qprintf_example.c  qprintf_example_imp.c
linux/4.4.0.1/ipc/asyncq/asyncdspq/: CMakeLists.txt  UbuntuARM.min  android.min  android_deps.min  cmake_build.bash  hexagon.min  hexagon_deps.min
linux/4.4.0.1/ipc/fastrpc/rpcmem/: CMakeLists.txt  android.min  android_deps.min  cmake_build.bash  hexagon.min  release.mak  rpcmem.md
linux/4.4.0.1/libs/getopt_custom/: CMakeLists.txt  Makefile  cmake_build.bash  hexagon.min  hexagon_deps.min  hexagon_unsupport.min
linux/4.4.0.1/libs/getopt_custom/inc/: getopt_custom.h  getopt_long_custom.h
linux/4.4.0.1/libs/getopt_custom/src/: getopt_custom.c
linux/4.4.0.1/libs/qhl/: CMakeLists.txt  README.md  cmake_build.bash  release.mak
linux/4.4.0.1/libs/qhl/performance/: QHL_Stats.xlsx
linux/4.4.0.1/libs/qhl/tests/: Makefile  run_accuracy_tests_simulator.bash  run_accuracy_tests_simulator.cmd  run_benchmarks_simulator.bash  run_benchmarks_simulator.cmd  (+2 more)
linux/4.4.0.1/libs/qhl_hvx/: CMakeLists.txt  README.md  cmake_build.bash  release.mak
linux/4.4.0.1/libs/qprintf/: CMakeLists.txt  Makefile  README.md  cmake_build.bash  hexagon.min  hexagon_deps.min  release.mak
linux/4.4.0.1/libs/run_main_on_hexagon/: CMakeLists.txt  UbuntuARM.min  all.mak  cmake_build.bash  hexagon.min  hexagon_deps.min  release.mak  walkthrough.py
linux/4.4.0.1/libs/worker_pool/: CMakeLists.txt  Makefile  README.md  all.mak  cmake_build.bash  hexagon.min  hexagon_deps.min  release.mak
(+3489 files in other folders)
